--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://pennfoster.applytojob.com/apply/gGQHZ7e1Wf/Business-Intelligence-Database-Architect'>Business Intelligence Database Architect - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
 <p><span class="badge badge-light">US-MD-Lanham</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -78,11 +82,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C'>Adevinta Classified Media Hungary Kft - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C'>Adevinta Classified Media Hungary Kft - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/letgo/jobs/1792118'>Job Application for Business Intelligence Analyst at letgo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/letgo/jobs/1792118'>Job Application for Business Intelligence Analyst at letgo</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -114,7 +118,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -168,7 +172,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -232,13 +236,13 @@ Media Hungary Kft.</p>
 believe a workplace food program is something employees should love and look
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
+<h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As our Business Intelligence Analyst you will be our driver and executer in 
 developing and implementing metrics and reporting to improve our business and
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -300,7 +304,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -367,7 +371,7 @@ Technologies Inc.</p>
 reporting infrastructure and visualisation to the next level. BI touches every part of
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/j2cloudservices/job/oVWE9fwo'>j2 Cloud Services Careers - Team Lead, Business Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2cloudservices/job/oVWE9fwo'>j2 Cloud Services Careers - Team Lead, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -457,7 +461,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -467,10 +471,6 @@ We enjoy working on a product that helps millions of people find love and get a?
 <hr/>
 <h5><a href='https://jobs.lever.co/signifyd/d6a53616-5194-4531-b1f1-5148448942ed'>Signifyd - Business Intelligence Solutions Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on: 2019-07-17</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/o21yafwv'>MediaCom Careers - Business Intelligence Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
 
